# py-doc-craw

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  scrapy.cfg
docs/: PRD.md
pydoc_crawler/: __init__.py  cli.py  items.py  pipelines.py  settings.py
pydoc_crawler/parsers/: __init__.py  mkdocs.py  sphinx.py
pydoc_crawler/spiders/: __init__.py  fastapi_spider.py  python_spider.py
scripts/: manual_crawl.py
tests/: conftest.py
tests/e2e/: conftest.py  helpers.py  test_crawler_e2e.py  test_spider_integration.py
tests/fixtures/: python_tutorial.md
