[project]
name = "pydoc-crawler"
version = "0.1.0"
description = "Python 문서 크롤러 - LLM/RAG용 Clean Markdown 데이터셋 구축"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "markdownify>=1.2.2",
    "pydantic>=2.12.5",
    "scrapy>=2.14.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.11",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
